# Audio_TRNG

./: .gitignore  CMakeLists.txt  README.md  audio_rng.cpp  run.sh
src/: Audio.cpp  Audio.hpp  EntropyCollector.cpp  EntropyCollector.hpp  Hyperchaos.cpp  Hyperchaos.hpp  Presentation.py  main.cpp
